<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_user_text"
            android:text="@string/username"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_user_text"
            android:id="@+id/register_user_edit"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_pass_text"
            android:text="@string/password"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/register_user_edit"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_pass_edit"
            android:layout_below="@id/register_pass_text"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            android:background="@drawable/button_shape"
            android:textColor="@android:color/white"
            android:layout_below="@id/register_pass_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:text="@string/register"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registered_text"
            android:text="@string/has_account"
            android:layout_below="@id/register_button"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_login_button"
            android:background="@drawable/button_shape_secondary"
            android:layout_below="@id/registered_text"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</RelativeLayout>