<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/login_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_text"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:text="@string/username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_edit"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/user_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_text"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:text="@string/password"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/user_edit"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@id/password_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:id="@+id/login_button"
            android:layout_below="@id/password_edit"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_text"
            android:text="@string/no_account"
            android:textSize="15sp"
            android:layout_below="@id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_text"
            android:id="@+id/login_register_button"
            android:background="@drawable/button_shape_secondary"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</RelativeLayout>