<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_welcome"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="zika.edu.recognitionclient.WelcomeActivity">

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="90dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:paddingBottom="5dp"
            android:id="@+id/email_edit_text"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:id="@+id/next_button"
        android:enabled="false"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_valid_text"
        android:text="@string/valid_email"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>

</LinearLayout>
